--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
               <li><a href="">Fragrance & Beauty</a></li>
             </ul>
           </div>
+          <div class="logo">
           <a href="index.html">
           <h1>GAR DE'ROBA</h1>
           </a>
+          </div>
+
           <div class="search">
             <form action="./search.php" method="GET">
               <input type="text" id="search" name="search" placeholder="What are you looking for?">
               <button type="submit" name="search" id="search" class="button"><i class="zmdi zmdi-search"></i></button>
             </form>
-          </div>
+          </div>  
+
       </div>
       <div id="navbar">
       
       </div>
     </header>
     <main>
-      <div class="main-container">
-        
         <div class="left img-item">
           <div class="text-item">
             <a href="fashion.html">
@@ -51,13 +53,13 @@
             </a>
           </div>
         </div>
-      </div>
     </main>
     <footer>
       <div class="footer-container">
         <form action="./subscribe.php" method="POST">
             <label>Newsletter</label>
             <input type="email" name="email" id="email" placeholder="*E-mail"/>
+            <input type="text" name="customerName" id="customerName" placeholder="Full Name" /> 
             <button type="submit" name="subscribe" id="subscribe" class="button">Subscribe</button>
           </form>
       </div>
