Day 3, end of day, finished .cover

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en-US">
   <head>
     <title>GAR DE'ROBA | bespoke clothing company</title>
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
       <div class="border-bottom top-block">
           <nav>
             <ul>  
-              <li>Home</li>
-              <li>Examples</li>
-              <li>About</li>
+              <li>The Home</li>
+              <li>Of your</li>
+              <li>Desires</li>
             </ul>
           </nav>
           <div class="logo">
@@ -38,12 +38,14 @@
       <div class="cover">
         <div class="left">
           <aside>
-
             <h2>Welcome to Gar De'Roba</h2> 
-            <p>where we believe that every woman deserves to feel confident 
-              and beautiful in her own skin. We specialize in creating bespoke clothing 
-              that is tailor-made to your unique measurements and preferences</p>
-            
+            <p>where we believe that <span class="emphasize">every</span> 
+              woman deserves to feel confident 
+                and beautiful in her own skin.<br>
+                We specialize in creating bespoke clothing<br> 
+              that is tailor-made to <span class="emphasize">your</span> 
+              unique measurements<br> and preferences.</p>
+            <div class="learn"><a href="index.html">Learn more</a></div>
           </aside>
         </div>
         <div class="right img-item">
