--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
     </header>
     <main>
       <div class="cover">
-        <div class="left">
+        <div class="left-cover">
           <aside>
-            <h2>Welcome to Gar De'Roba</h2> 
+            <h1>Welcome to Gar De'Roba</h1> 
             <p>where we believe that <span class="emphasize">every</span> 
               woman deserves to feel confident 
                 and beautiful in her own skin.<br>
                 We specialize in creating bespoke clothing<br> 
               that is tailor-made to <span class="emphasize">your</span> 
               unique measurements<br> and preferences.</p>
-            <div class="learn"><a href="index.html">Learn more</a></div>
+            <div class="cta-black"><a href="#learn-more">Learn more</a></div>
           </aside>
         </div>
-        <div class="right img-item">
+        <div class="right-cover cover-img">
           <div class="filter"></div>
           <div class="cta">
             <a href="fashion.html">
@@ -57,6 +57,47 @@
             </a>
           </div>
         </div>
+      </div>
+      <div class="center whatis">
+        <h2 id="learn-more">Experience the Luxury of Bespoke Clothing</h2>
+        <p>Whether you're looking for a stunning evening gown,
+          a perfectly fitted blazer,<br> or anything in between, 
+          we've got you covered.<br> 
+          We work closely with you to ensure that every detail is just right,<br> 
+          from the fabric selection to the finishing touches.</p>
+          <div class="cta-black"><a href="">Discover</a></div>
+      </div>
+      <div class="left">
+        <div class="left-image">
+          <img src="./assets/img/counsultation.jpg" alt="Consultation with a tailor">
+        </div>
+        <div class="right-text">
+        <h2>Creating Your Perfectly Tailored Clothing</h2>
+        <p>Our process starts with a consultation, <br>either in person or online, 
+          where we get to know you and your style preferences.<br> 
+          We'll take precise measurements and discuss your expectations,<br> 
+          so we can create a garment that is expertly crafted just for you.</p>
+        </div>
+      </div>
+      <div class="right">
+        <div class="right-image">
+          <img src="./assets/img/tailor.jpg" alt="Tailor preparing for work">
+        </div>
+        <div class="left-text">
+          <h2>Our portfolio</h2>
+          <p>We also invite you to browse our portfolio of previously completed work<br> 
+          to get inspired and see the quality of our craftsmanship.</p>
+        </div>
+      </div>
+      <div class="left">
+        <div class="left-image"><img src="./assets/img/vision.jpg" alt="Woman wearing a dress in the field of roses"></div>
+        <div class="right-text">
+          <h2>Your vision</h2>
+          <p>After the consultation, we'll work diligently to bring your vision to life.<br> 
+          We believe in transparency, so we'll keep you updated on the progress of your garment<br> 
+          and invite you to at least one fitting session <br>
+          to ensure that everything fits perfectly.</p>
+        </div>  
       </div>
     </main>
     <footer>
