--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           where we get to know you and your style preferences.<br> 
           We'll take precise measurements and discuss your expectations,<br> 
           so we can create a garment that is expertly crafted just for you.</p>
+          <div class="cta-black"><a href="">Start now</a></div>
         </div>
       </div>
       <div class="right">
@@ -87,6 +88,7 @@
           <h2>Our portfolio</h2>
           <p>We also invite you to browse our portfolio of previously completed work<br> 
           to get inspired and see the quality of our craftsmanship.</p>
+          <div class="cta-black"><a href="">Take a look</a></div>
         </div>
       </div>
       <div class="left">
@@ -97,6 +99,7 @@
           We believe in transparency, so we'll keep you updated on the progress of your garment<br> 
           and invite you to at least one fitting session <br>
           to ensure that everything fits perfectly.</p>
+          <div class="cta-black"><a href="">Book a consultation</a></div>
         </div>  
       </div>
     </main>
