--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head> 
   <body>
     <header id="header">
-      <div class="border-bottom top-block">
+      <div class="border-btm top-block">
           <nav>
             <ul>  
               <li>The Home</li>
@@ -71,7 +71,7 @@
         <div class="left-image">
           <img src="./assets/img/counsultation.jpg" alt="Consultation with a tailor">
         </div>
-        <div class="right-text">
+        <div class="right-text border-btm border-top">
         <h2>Creating Your Perfectly Tailored Clothing</h2>
         <p>Our process starts with a consultation, <br>either in person or online, 
           where we get to know you and your style preferences.<br> 
@@ -84,7 +84,7 @@
         <div class="right-image">
           <img src="./assets/img/tailor.jpg" alt="Tailor preparing for work">
         </div>
-        <div class="left-text">
+        <div class="left-text border-btm border-top">
           <h2>Our portfolio</h2>
           <p>We also invite you to browse our portfolio of previously completed work<br> 
           to get inspired and see the quality of our craftsmanship.</p>
@@ -93,7 +93,7 @@
       </div>
       <div class="left">
         <div class="left-image"><img src="./assets/img/vision.jpg" alt="Woman wearing a dress in the field of roses"></div>
-        <div class="right-text">
+        <div class="right-text border-btm border-top">
           <h2>Your vision</h2>
           <p>After the consultation, we'll work diligently to bring your vision to life.<br> 
           We believe in transparency, so we'll keep you updated on the progress of your garment<br> 
@@ -104,14 +104,7 @@
       </div>
     </main>
     <footer>
-      <div class="footer-container">
-        <form action="./subscribe.php" method="POST">
-            <label>Newsletter</label>
-            <input type="email" name="email" id="email" placeholder="*E-mail"/>
-            <input type="text" name="customerName" id="customerName" placeholder="Full Name" /> 
-            <button type="submit" name="subscribe" id="subscribe" class="button">Subscribe</button>
-          </form>
-      </div>
+  
     </footer>
   </body>
 </html>
