--- a/index.html
+++ b/index.html
@@ -10,34 +10,42 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
   </head> 
   <body>
-    <header id="header">
+<header id="header">
       <div class="border-btm top-block">
-          <nav>
-            <ul>  
-              <li>The Home</li>
-              <li>Of your</li>
-              <li>Desires</li>
-            </ul>
-          </nav>
-          <div class="logo">
-          <a href="index.html">
+        <div id="logo">
+          <a href="index.html" target="_self">
           <h1>GAR DE'ROBA</h1>
           </a>
-          </div>
-
+        </div>
+          <nav>
+            <ul>  
+              <li id="home" class="this tooltip"><a href="index.html">Home</a>
+              </li>
+              <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
+              </li>
+              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="icon-ribbon">
           <div class="search">
             <form action="./search.php" method="GET">
               <input type="text" id="search" name="search" placeholder="What are you looking for?">
               <button type="submit" name="search" id="searchBtn" class="button"><i class="zmdi zmdi-search"></i></button>
             </form>
-          </div>  
-
+          </div>
+          <a href="https://www.facebook.com/" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
+          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
+          </div> 
+       
       </div>
-    </header>
-    <main>
+</header>
+<main>
       <div class="cover">
         <div class="left-cover">
           <aside>
+
             <h1>Welcome to Gar De'Roba</h1> 
             <p>where we believe that <span class="emphasize">every</span> 
               woman deserves to feel confident 
@@ -58,6 +66,7 @@
           </div>
         </div>
       </div>
+    <section>
       <div class="center whatis">
         <h2 id="learn-more">Experience the Luxury of Bespoke Clothing</h2>
         <p>Whether you're looking for a stunning evening gown,
@@ -67,17 +76,21 @@
           from the fabric selection to the finishing touches.</p>
           <div class="cta-black"><a href="">Discover</a></div>
       </div>
+    </section>
+    <section>
       <div class="left">
         <div class="left-image">
           <img src="./assets/img/counsultation.jpg" alt="Consultation with a tailor">
         </div>
         <div class="right-text border-btm border-top">
+        <article id="consultation">
         <h2>Creating Your Perfectly Tailored Clothing</h2>
         <p>Our process starts with a consultation, <br>either in person or online, 
           where we get to know you and your style preferences.<br> 
           We'll take precise measurements and discuss your expectations,<br> 
           so we can create a garment that is expertly crafted just for you.</p>
           <div class="cta-black"><a href="">Start now</a></div>
+        </article>
         </div>
       </div>
       <div class="right">
@@ -85,26 +98,31 @@
           <img src="./assets/img/tailor.jpg" alt="Tailor preparing for work">
         </div>
         <div class="left-text border-btm border-top">
+          <article>
           <h2>Our portfolio</h2>
           <p>We also invite you to browse our portfolio of previously completed work<br> 
           to get inspired and see the quality of our craftsmanship.</p>
           <div class="cta-black"><a href="">Take a look</a></div>
+          </article>
         </div>
       </div>
       <div class="left">
         <div class="left-image"><img src="./assets/img/vision.jpg" alt="Woman wearing a dress in the field of roses"></div>
         <div class="right-text border-btm border-top">
+          <article>
           <h2>Your vision</h2>
           <p>After the consultation, we'll work diligently to bring your vision to life.<br> 
           We believe in transparency, so we'll keep you updated on the progress of your garment<br> 
           and invite you to at least one fitting session <br>
           to ensure that everything fits perfectly.</p>
           <div class="cta-black"><a href="">Book a consultation</a></div>
+          </article>
         </div>  
-      </div>
-    </main>
-    <footer>
+        </div>
+      </section>
+</main>
+<footer>
   
-    </footer>
-  </body>
+</footer>
+</body>
 </html>
