--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
               </li>
             </ul>
           </nav>
-          <div class="icon-ribbon">
-          <div class="search">
+          <div class="phone-ribbon">
+          <!--<div class="search">
             <form action="./search.php" method="GET">
               <input type="text" id="search" name="search" placeholder="What are you looking for?">
               <button type="submit" name="search" id="searchBtn" class="button"><i class="zmdi zmdi-search"></i></button>
             </form>
-          </div>
-          <a href="https://www.facebook.com/" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
-          <a href="https://www.instagram.com/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
-          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
+          </div>-->
+          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
           </div> 
        
       </div>
@@ -122,7 +120,30 @@
       </section>
 </main>
 <footer>
-  
-</footer>
+  <div id="copyright" class="flex-row">
+  <h3>&COPY; 2023, Gar De'Roba</h3>
+  <p>All rights reserved</p>
+  </div>
+  <div id="footer-links" class="flex-row">
+    <ul class="flex-row">  
+        <li id="home" class="this tooltip"><a href="#header">Home</a>
+        </li>
+        <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
+        </li>
+        <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+        </li>
+    </ul>
+    <div id="footer-icons" class="flex-row">
+    <p>Us, elsewhere:</p>
+    <a href="https://www.facebook.com/" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
+    <a href="https://www.instagram.com/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
+    <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
+    <div class="spacer-1"></div>
+    <p>Developers:</p>
+    <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
+    <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
+    <a href="author.html">by Alexiye</a>
+    </div>
+  </div>
 </body>
 </html>
