--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <p>Developers:</p>
     <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
     <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
+    <div class="spacer-1"></div>
     <a href="author.html">by Alexiye</a>
     </div>
   </div>
