--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>  
               <li id="home" class="this tooltip"><a href="index.html">Home</a>
               </li>
-              <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
+              <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
               <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
               </li>
@@ -57,7 +57,7 @@
           <div class="filter"></div>
           <div class="cta">
             <a href="fashion.html">
-            <h2>Book a consultation</h2>
+            <h2>Bespoke Clothing</h2>
             <p>Discover your unique style</p>
             </a>
           </div>
