--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
             <ul>  
               <li id="home" class="this tooltip"><a href="index.html">Home</a>
               </li>
-              <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
+              <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
               <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
               </li>
@@ -40,15 +40,52 @@
       </div>
 </header>
 <main>
-    <section id="whatdo">
-        <article id="coats" class="left">
-
-        </article>
-        <article id="blazers" class="right">
-            <img src="./assets/img/blazer-unfinished.jpg" alt="Picture of unfinished blazer">
-        </article>
+    <section id="portfolio">
         <article id="gowns" class="left">
+            <div class="left-image">
+                <a href="contact.html">
+            <img src="./assets/img/gown.jpg" alt="Woman in a wedding gown">
+                </a>
+            </div>
+            <div class="right-text">
+                <div class="underline"><a href="contact.html"><h2>Gowns</h2></a></div>
+                <p>Our bespoke gowns are designed to make you feel like royalty.
+                     From intricate beading to luxurious fabrics, 
+                     we'll create a gown that is truly one-of-a-kind. 
+                     We work closely with you to create a gown that fits your unique style and preferences, 
+                     whether you're looking for a classic ball gown or something more modern. 
+                    Our expert team of tailors and designers 
+                    will ensure that your gown fits you perfectly and makes you feel like the belle of the ball.</p>
+            </div>    
+        </article>
+        
+        <article id="blazers" class="right">
+            <div class="left-text">
+                <div class="underline"><a href="contact.html"><h2>Blazers</h2></a></div>
+                <p>Our bespoke blazers are the perfect addition to any wardrobe. From casual to formal, 
+                    our expertly crafted blazers are designed to make you look and feel your best. 
+                    We work closely with you to create a blazer that fits your unique style and preferences. 
+                    Whether you're looking for a classic navy blazer or something more daring, 
+                    our team will create a blazer that will become a go-to piece in your wardrobe.</p>
+            </div>
             
+            <div class="right-image">
+                <a href="contact.html">
+                <img src="./assets/img/blazer-unfinished.jpg" alt="Picture of unfinished blazer">
+            </a>
+            </div>
+        </article>
+        <article id="coats" class="left">
+            <div class="left-image">
+                <a href="contact.html">
+                <img src="./assets/img/coat.jpg" alt="Woman in a coat, colorful flowering tree backdrop">
+            </a></div>
+        <div class="right-text">
+            <div class="underline"><a href="contact.html"><h2>Coats</h2></a></div>    
+            <p>Our bespoke coats are expertly crafted to keep you warm and stylish during the colder months. 
+                We use the finest materials and work closely with you to ensure that your coat is tailored to your unique style and preferences. Whether you're looking for a classic wool coat or a more modern parka, 
+                we'll create a coat that will become a staple in your wardrobe for years to come.</p>
+        </div>
         </article>
     </section>
 </main>
@@ -61,7 +98,7 @@
     <ul class="flex-row">  
         <li id="home" class="this tooltip"><a href="#header">Home</a>
         </li>
-        <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
+        <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
         </li>
         <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
         </li>
