--- a/author.html
+++ b/author.html
@@ -21,7 +21,7 @@
             <ul>  
               <li id="home" class="this tooltip"><a href="index.html">Home</a>
               </li>
-              <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
+              <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
               <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
               </li>
@@ -40,7 +40,7 @@
       </div>
 </header>
 <main>
-    
+
 </main>
 <footer>
   <div id="copyright" class="flex-row">
