Hotfix, nav underline

--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
         </div>
           <nav>
             <ul>  
-              <li id="home" class="this tooltip"><a href="index.html">Home</a>
+              <li id="home" class="tooltip"><a href="index.html">Home</a>
               </li>
               <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
-              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+              <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
@@ -62,11 +62,11 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-        <li id="home" class="this tooltip"><a href="#header">Home</a>
+        <li id="home" class="tooltip"><a href="#header">Home</a>
         </li>
         <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
         </li>
-        <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+        <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
         </li>
     </ul>
     <div id="footer-icons" class="flex-row">
