--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
         </div>
           <nav>
             <ul>  
-              <li id="home" class="this tooltip"><a href="index.html">Home</a>
+              <li id="home" class="tooltip"><a href="index.html">Home</a>
               </li>
-              <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+              <li id="bespoke" class="this tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
               <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
               </li>
@@ -96,9 +96,9 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-        <li id="home" class="this tooltip"><a href="#header">Home</a>
+        <li id="home" class="tooltip"><a href="#header">Home</a>
         </li>
-        <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+        <li id="bespoke" class="this tooltip"><a href="portfolio.html">Bespoke Clothing</a>
         </li>
         <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
         </li>
