updated rssfeed and sitemap

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="right-cover cover-img">
           <div class="filter"></div>
           <div class="cta">
-            <a href="fashion.html">
+            <a href="portfolio.html">
             <h2>Bespoke Clothing</h2>
             <p>Discover your unique style</p>
             </a>
