--- a/author.html
+++ b/author.html
@@ -40,7 +40,18 @@
       </div>
 </header>
 <main>
+  <div id="author" class="left">
 
+      <div class="left-image">
+        <img src="./admin/profile.jpg" alt="Author image">
+      </div>
+      <div class="right-text">
+        <h2>Aleksije Vukić</h2>
+      <h3>115/22</h3>
+      <p>It's me.</p>
+      </div>
+      
+  </div>
 </main>
 <footer>
   <div id="copyright" class="flex-row">
@@ -49,9 +60,9 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-        <li id="home" class="this tooltip"><a href="#header">Home</a>
+        <li id="home" class="tooltip"><a href="index.html">Home</a>
         </li>
-        <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
+        <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
         </li>
         <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
         </li>
@@ -66,7 +77,7 @@
     <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
     <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
     <div class="spacer-1"></div>
-    <a href="author.html">by Alexiye</a>
+    <a class="this" href="author.html">by Alexiye</a>
     </div>
   </div>
 </body>
