Added a map iframe

--- a/author.html
+++ b/author.html
@@ -64,7 +64,7 @@
         </li>
         <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
         </li>
-        <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+        <li id="contact-footer" class="tooltip"><a href="contact.html">Contact Us</a>
         </li>
     </ul>
     <div id="footer-icons" class="flex-row">
