--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,18 @@
       </div>
 </header>
 <main>
-    <div id="contact-form">
+    <div id="contact-box" class="center left">
+      <div class="left-image">
+        <h2>Our location:</h2>
+        <p>249 Brighton Beach Ave</p>
+        <p>New York, NY 11235</p>
+        <p>USA</p>
+        <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+        src="https://www.openstreetmap.org/export/embed.html?bbox=-73.96870493888856%2C40.57572596671045%2C-73.96491765975954%2C40.577665413612635&amp;layer=mapnik"></iframe><br/>
+        <small><a href="https://www.openstreetmap.org/#map=19/40.57670/-73.96681">View Larger Map</a></small>  
+      
+      </div>
+    <div id="contact-form" class="right-text">
         <form action="contact.php">
             <div class="form-row">
             <input type="text" name="name" id="name" placeholder="Name" required>
@@ -58,6 +69,7 @@
             </div>
         </form>
     </div>
+</div>
 </main>
 <footer>
   <div id="copyright" class="flex-row">
@@ -70,7 +82,7 @@
         </li>
         <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
         </li>
-        <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
+        <li id="contact-footer" class="this tooltip"><a href="contact.html">Contact Us</a>
         </li>
     </ul>
     <div id="footer-icons" class="flex-row">
