--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </li>
         <li id="bespoke" class="tooltip"><a href="#learn-more">Bespoke Clothing</a>
         </li>
-        <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+        <li id="contact-footer" class="tooltip"><a href="contact.html">Contact Us</a>
         </li>
     </ul>
     <div id="footer-icons" class="flex-row">
