--- a/contact.html
+++ b/contact.html
@@ -46,12 +46,14 @@
         <p>249 Brighton Beach Ave</p>
         <p>New York, NY 11235</p>
         <p>USA</p>
+        <p>Business hours: 9AM to 5PM EDT (UTC-4  )</p>
+        <p>EIN: 89-3433755</p>
+        <div class="spacer-1"></div>
         <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
         src="https://www.openstreetmap.org/export/embed.html?bbox=-73.96870493888856%2C40.57572596671045%2C-73.96491765975954%2C40.577665413612635&amp;layer=mapnik"></iframe><br/>
         <small><a href="https://www.openstreetmap.org/#map=19/40.57670/-73.96681">View Larger Map</a></small>  
-      
       </div>
-    <div id="contact-form" class="right-text">
+      <div id="contact-form" class="right-text">
         <form action="contact.php">
             <div class="form-row">
             <input type="text" name="name" id="name" placeholder="Name" required>
@@ -68,8 +70,38 @@
               <input type="submit" value="Send">
             </div>
         </form>
+      </div>
     </div>
-</div>
+    <div id="faq" class="center">
+      <h2>Frequently Asked Questions</h2>
+      <p class="sub-heading">How long does it take to make a bespoke garment?</p>
+      <p>In short, we recommend allowing <span class="emphasize"> at least 2 and at most 8 weeks</span> before the first fitting. 
+        This timeframe may vary depending on the availability of <span class="emphasize">your chosen materials</span> 
+        and the workload of <span class="emphasize">your chosen tailor</span>. If you have requested a specific tailor, 
+        their availability may also affect the timeline. If you have a specific deadline in mind, 
+        <span class="emphasize">please let us know as soon as possible</span> so we can work together 
+        to ensure your garment is completed on time. 
+        We always strive to deliver high-quality garments within a reasonable timeframe.</p>
+
+        <p class="sub-heading">How many fittings do I need for a bespoke garment?</p>
+        <p><span class="emphasize">We typically schedule one to two fittings</span> for each garment 
+          to ensure that it fits you perfectly. 
+          However, there may be some specific situations where additional fittings may be required. 
+          For instance, if you have significant changes in your body size or shape 
+          during the tailoring process, 
+          we may need to schedule additional fittings to make necessary adjustments.</p>
+        <p class="sub-heading">Do you offer alterations on non-Gar De'Roba garments?</p>
+        <p><span class="emphasize">Yes,</span> we offer alterations on non-Gar De'Roba garments. 
+          However, please keep in mind that the extent of the alterations we can make may be limited. 
+          For example, it is generally easier to remove material from an item 
+          than it is to make a complete garment bigger. 
+          We will do our best to make the desired alterations, 
+          but <span class="emphasize">we cannot guarantee the same level of quality</span> as with our own bespoke garments.</p>
+        <p class="sub-heading">Can I request a specific fabric for my garment?</p>
+        <p><span class="emphasize">Ofcourse</span>, we're happy to source any fabric on behalf of our customers 
+          just be mindful that it <span class="emphasize">might delay the completion</span> of your garment. 
+          It's best to notify your tailor about it at the first consultation.</p>
+    </div>
 </main>
 <footer>
   <div id="copyright" class="flex-row">
