--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,6 @@
             </ul>
           </nav>
           <div class="phone-ribbon">
-          <!--<div class="search">
-            <form action="./search.php" method="GET">
-              <input type="text" id="search" name="search" placeholder="What are you looking for?">
-              <button type="submit" name="search" id="searchBtn" class="button"><i class="zmdi zmdi-search"></i></button>
-            </form>
-          </div>-->
           <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
           </div> 
        
@@ -114,7 +108,7 @@
         </li>
         <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
         </li>
-        <li id="contact-footer" class="this tooltip"><a href="contact.html">Contact Us</a>
+        <li id="contact-footer" class="this tooltip"><a href="#header">Contact Us</a>
         </li>
     </ul>
     <div id="footer-icons" class="flex-row">
