--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,6 @@
             </ul>
           </nav>
           <div class="phone-ribbon">
-          <!--<div class="search">
-            <form action="./search.php" method="GET">
-              <input type="text" id="search" name="search" placeholder="What are you looking for?">
-              <button type="submit" name="search" id="searchBtn" class="button"><i class="zmdi zmdi-search"></i></button>
-            </form>
-          </div>-->
           <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
           </div> 
        
@@ -96,9 +90,9 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-        <li id="home" class="tooltip"><a href="#header">Home</a>
+        <li id="home" class="tooltip"><a href="index.html">Home</a>
         </li>
-        <li id="bespoke" class="this tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+        <li id="bespoke" class="this tooltip"><a href="#header">Bespoke Clothing</a>
         </li>
         <li id="contact-footer" class="tooltip"><a href="contact.html">Contact Us</a>
         </li>
