--- a/author.html
+++ b/author.html
@@ -19,10 +19,11 @@
         </div>
           <nav>
             <ul>  
-              <li id="home" class="this tooltip"><a href="index.html">Home</a>
+              <li id="home" class="tooltip"><a href="index.html">Home</a>
               </li>
               <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
+              <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
               <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
               </li>
             </ul>
@@ -60,12 +61,13 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-        <li id="home" class="tooltip"><a href="index.html">Home</a>
-        </li>
-        <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-        </li>
-        <li id="contact-footer" class="tooltip"><a href="contact.html">Contact Us</a>
-        </li>
+      <li id="home" class="tooltip"><a href="index.html">Home</a>
+      </li>
+      <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+      </li>
+      <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
+      <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+      </li>
     </ul>
     <div id="footer-icons" class="flex-row">
     <p>Us, elsewhere:</p>
