--- a/clients.html
+++ b/clients.html
@@ -3,7 +3,6 @@
   <head>
     <title>GAR DE'ROBA | bespoke clothing company</title>
     <meta charset="utf-8">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
@@ -23,7 +22,8 @@
               </li>
               <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
-              <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
+              <li id="clients" class="this tooltip"><a href="clients.html">Our Clients</a></li>
+              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
@@ -34,12 +34,25 @@
       </div>
 </header>
 <main>
-<div class="center">
+<div class="center">  
     <section>
-        <article id="most-important-client">
-            <img src="" alt="">
+        <article id="anya">
+            <img src="assets/img/anya-romanova.jpg" alt="Woman sitting on the stairs">
+            <div>
+            <div id="anya-title">
+              <h2>Anya <br><span class="fw-400">Romanova</span></h2>
+              <div class="u-shape"></div>
+              <div class="u-shape-dot"></div>
+            </div>
+            <div id="anya-content">
+              <h3>Fashion model</h3>
+              <p>As a fashion model, I've worked with many designers and tailors, 
+                but <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out in their attention to detail and personalized service.
+                 </p>
+            </div>
+          </div>
         </article>
-        <article id="small-but-interesting-client">
+        <article id="small-but-interesting-client"> 
 
         </article>
         <article id="second-client">
@@ -55,12 +68,13 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-        <li id="home" class="tooltip"><a href="index.html">Home</a>
-        </li>
-        <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-        </li>
-        <li id="contact-footer" class="this tooltip"><a href="#header">Contact Us</a>
-        </li>
+      <li id="home" class="tooltip"><a href="index.html">Home</a>
+      </li>
+      <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+      </li>
+      <li id="clients" class="this tooltip"><a href="clients.html">Our Clients</a></li>
+      <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+      </li>
     </ul>
     <div id="footer-icons" class="flex-row">
     <p>Us, elsewhere:</p>
