--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
               </li>
               <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
-              <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
+              <li id="clients" class="this tooltip"><a href="clients.html">Our Clients</a></li>
+              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
@@ -104,12 +105,13 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-        <li id="home" class="tooltip"><a href="index.html">Home</a>
-        </li>
-        <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-        </li>
-        <li id="contact-footer" class="this tooltip"><a href="#header">Contact Us</a>
-        </li>
+      <li id="home" class="tooltip"><a href="index.html">Home</a>
+      </li>
+      <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+      </li>
+      <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
+      <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
+      </li>
     </ul>
     <div id="footer-icons" class="flex-row">
     <p>Us, elsewhere:</p>
