--- a/clients.html
+++ b/clients.html
@@ -37,7 +37,7 @@
 <div class="center">  
     <section>
         <article id="anya">
-            <img src="assets/img/anya-romanova.jpg" alt="Woman sitting on the stairs">
+            <img src="assets/img/anya.jpg" alt="Woman sitting on the stairs">
             <div>
             <div id="anya-title">
               <h2>Anya <br><span class="fw-400">Romanova</span></h2>
