updated rss and sitemap

--- a/clients.html
+++ b/clients.html
@@ -40,15 +40,15 @@
             <img src="assets/img/anya.jpg" alt="Woman sitting on the stairs">
             <div>
             <div id="anya-title">
-              <h2>Anya <br><span class="fw-400">Romanova</span></h2>
+              <h2>Anya <br><span class="fw-200">Romanova</span></h2>
               <div class="u-shape"></div>
               <div class="u-shape-dot"></div>
             </div>
             <div id="anya-content">
               <h3>Fashion model</h3>
-              <p>As a fashion model, I've worked with many designers and tailors, 
-                but <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out in their attention to detail and personalized service.
-                 </p>
+              <p>&ldquo;As a fashion model, I've worked with many designers and tailors, 
+                but <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out 
+                in their attention to detail and personalized service&bdquo;</p>
             </div>
           </div>
         </article>
