fixed duplicate id and unclosed tag

--- a/admin/template.html
+++ b/admin/template.html
@@ -42,12 +42,13 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-        <li id="home" class="tooltip"><a href="index.html">Home</a>
-        </li>
-        <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-        </li>
-        <li id="contact-footer" class="this tooltip"><a href="#header">Contact Us</a>
-        </li>
+      <li class="tooltip"><a href="index.html">Home</a>
+      </li>
+      <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+      </li>
+      <li class="tooltip"><a href="clients.html">Our Clients</a></li>
+      <li class="tooltip"><a href="contact.html">Contact Us</a>
+      </li>
     </ul>
     <div id="footer-icons" class="flex-row">
     <p>Us, elsewhere:</p>
@@ -62,5 +63,6 @@
     <a href="author.html">by Alexiye</a>
     </div>
   </div>
+</footer>
 </body>
 </html>
