--- a/contact.html
+++ b/contact.html
@@ -105,12 +105,12 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-      <li id="home" class="tooltip"><a href="index.html">Home</a>
+      <li  class="tooltip"><a href="index.html">Home</a>
       </li>
-      <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+      <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
       </li>
-      <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
-      <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
+      <li class="tooltip"><a href="clients.html">Our Clients</a></li>
+      <li class="this tooltip"><a href="contact.html">Contact Us</a>
       </li>
     </ul>
     <div id="footer-icons" class="flex-row">
@@ -126,5 +126,6 @@
     <a href="author.html">by Alexiye</a>
     </div>
   </div>
+</footer>
 </body>
 </html>
