--- a/clients.html
+++ b/clients.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
   </head> 
-  <body>
+<body>
 <header id="header">
       <div class="border-btm top-block">
         <div id="logo">
@@ -30,7 +30,6 @@
           <div class="phone-ribbon">
           <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
           </div> 
-       
       </div>
 </header>
 <main>
@@ -52,7 +51,7 @@
             </div>
           </div>
         </article>
-        <article id="small-but-interesting-client"> 
+        <article id="anya-says"> 
 
         </article>
         <article id="second-client">
