--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
   </div>
   <div id="footer-links" class="flex-row">
     <ul class="flex-row">  
-      <li id="home" class="this tooltip"><a href="index.html">Home</a>
+      <li  class="this tooltip"><a href="index.html">Home</a>
       </li>
-      <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
+      <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
       </li>
-      <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
-      <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+      <li class="tooltip"><a href="clients.html">Our Clients</a></li>
+      <li class="tooltip"><a href="contact.html">Contact Us</a>
       </li>
     </ul>
     <div id="footer-icons" class="flex-row">
