--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,7 @@
         <p>Business hours: 9AM to 5PM EDT (UTC-4  )</p>
         <p>EIN: 89-3433755</p>
         <div class="spacer-1"></div>
-        <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-        src="https://www.openstreetmap.org/export/embed.html?bbox=-73.96870493888856%2C40.57572596671045%2C-73.96491765975954%2C40.577665413612635&amp;layer=mapnik"></iframe><br/>
+        <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=-73.96870493888856%2C40.57572596671045%2C-73.96491765975954%2C40.577665413612635&amp;layer=mapnik"></iframe><br/>
         <small><a href="https://www.openstreetmap.org/#map=19/40.57670/-73.96681">View Larger Map</a></small>  
       </div>
       <div id="contact-form" class="right-text">
