contact link fix

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
               </li>
               <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
               </li>
-              <li id="clients" class="this tooltip"><a href="clients.html">Our Clients</a></li>
-              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
+              <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
+              <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
