Added some meta tags

--- a/clients.html
+++ b/clients.html
@@ -3,6 +3,9 @@
   <head>
     <title>GAR DE'ROBA | bespoke clothing company</title>
     <meta charset="utf-8">
+    <meta name="description" content="Bespoke clothing company">
+    <meta name="keywords" content="bespoke, clothing, tailored, unique, craftsmanship">
+    <meta name="author" content="Alexiye">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
