--- a/admin/template.html
+++ b/admin/template.html
@@ -31,7 +31,13 @@
           </nav>
           <div class="phone-ribbon">
           <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
-          </div> 
+          <!--<div class="search">
+            <form action="./search.php" method="GET">
+              <input type="text" id="search" name="search" placeholder="What are you looking for?">
+              <button type="submit" name="search" id="searchBtn" class="button"><i class="zmdi zmdi-search"></i></button>
+            </form>
+          </div>-->
+        </div> 
        
       </div>
 </header>
