--- a/clients.html
+++ b/clients.html
@@ -38,7 +38,7 @@
 <main>
 <div class="center">  
     <section>
-        <article id="anya">
+        <article id="anya" class="article-grid">
             <img src="assets/img/anya.jpg" alt="Woman sitting on the stairs">
             <div>
             <div id="anya-title">
@@ -52,10 +52,27 @@
                 but <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out 
                 in their attention to detail and personalized service&bdquo;</p>
             </div>
-          </div>
+            </div>
         </article>
-        <article id="anya-says"> 
-
+        <article id="tamara" class="article-grid"> 
+          <div id="slogan" class="flex-col">
+            <p>Graceful.</p>
+            <p>Effortless.</p>
+            <p>Dependable.</p>
+            <p><span class="fw-600">Gar De'Roba.</span></p>
+          </div>
+          <div class="flex-row">
+            <div id="tamara-content">
+              <h2>Tamara</h2>
+              <p>Makeup Brand Ambassador</p>
+              <p>&ldquo;My job requires that I always look my best. 
+                While that entails many things, with <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>
+                at least one of them is effortlessly taken care of. Whether it's a formal C-suite meetings,
+                product presentations or general content production, your talilors got my back.&bdquo;
+              </p>
+            </div>
+            <img src="assets/img/tamara.jpg" alt="Woman walking to the right">
+          </div>
         </article>
         <article id="second-client">
 
