--- a/clients.html
+++ b/clients.html
@@ -67,7 +67,7 @@
               <p>Makeup Brand Ambassador</p>
               <p>&ldquo;My job requires that I always look my best. 
                 While that entails many things, with <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>
-                at least one of them is effortlessly taken care of. Whether it's a formal C-suite meetings,
+                at least one of them is effortlessly taken care of. Whether it's formal C-suite meetings,
                 product presentations or general content production, your talilors got my back.&bdquo;
               </p>
             </div>
