--- a/clients.html
+++ b/clients.html
@@ -49,7 +49,7 @@
             <div id="anya-content">
               <h3>Fashion model</h3>
               <p>&ldquo;As a fashion model, I've worked with many designers and tailors, 
-                but <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out 
+                but <br><span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out 
                 in their attention to detail and personalized service&bdquo;</p>
             </div>
             </div>
