--- a/clients.html
+++ b/clients.html
@@ -49,7 +49,7 @@
             <div id="anya-content">
               <h3>Fashion model</h3>
               <p>&ldquo;As a fashion model, I've worked with many designers and tailors, 
-                but <br><span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out 
+                but <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out 
                 in their attention to detail and personalized service&bdquo;</p>
             </div>
             </div>
@@ -66,7 +66,7 @@
               <h2>Tamara</h2>
               <p>Makeup Brand Ambassador</p>
               <p>&ldquo;My job requires that I always look my best. 
-                While that entails many things, with <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>
+                While that entails many things, <br>with <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>
                 at least one of them is effortlessly taken care of. Whether it's formal C-suite meetings,
                 product presentations or general content production, your talilors got my back.&bdquo;
               </p>
