--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <small><a href="https://www.openstreetmap.org/#map=19/40.57670/-73.96681">View Larger Map</a></small>  
       </div>
       <div id="contact-form" class="right-text">
-        <form action="contact.php">
+        <form action="contact.php" method="post">
             <div class="form-row">
             <input type="text" name="name" id="name" placeholder="Name" required>
             <input type="text" name="surname" id="surname" placeholder="Surname" required>
