--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           we've got you covered.<br> 
           We work closely with you to ensure that every detail is just right,<br> 
           from the fabric selection to the finishing touches.</p>
-          <div class="cta-black"><a href="">Discover</a></div>
+          <div class="cta-black"><a href="portfolio.html">Discover</a></div>
       </div>
     </section>
     <section>
