--- a/portfolio.html
+++ b/portfolio.html
@@ -37,54 +37,99 @@
       </div>
 </header>
 <main>
-    <section id="portfolio">
-        <article id="gowns" class="left">
-            <div class="left-image">
-                <a href="contact.html">
-            <img src="./assets/img/gown.jpg" alt="Woman in a wedding gown">
-                </a>
+  <div class="center">  
+    <section>
+        <article id="gown" class="center-grid">
+            <div id="gown-title">
+              <h2>Wedding <br><span class="fw-300">Gowns</spa n></h2>
+              <div id="gown-quot">
+                <div><a href="https://www.facebook.com/"><i class="zmdi zmdi-facebook"></i></a>
+                </div>
+                <div>
+                  <p>&ldquo;I felt like a queen on my wedding day, thanks to my one-of-a-kind gown from <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>&bdquo;</p>
+                </div>
+              </div>
             </div>
-            <div class="right-text">
-                <div class="underline"><a href="contact.html"><h2>Gowns</h2></a></div>
+            <div id="gown-image">
+              <img src="assets/img/wedding-dress.jpg" alt="Bride on the rocks">
+            </div>
+            <div class="flex-col">
+              <div id="gown-content">
+                <h3>About</h3>  
                 <p>Our bespoke gowns are designed to make you feel like royalty.
-                     From intricate beading to luxurious fabrics, 
-                     we'll create a gown that is truly one-of-a-kind. 
-                     We work closely with you to create a gown that fits your unique style and preferences, 
-                     whether you're looking for a classic ball gown or something more modern. 
-                    Our expert team of tailors and designers 
-                    will ensure that your gown fits you perfectly and makes you feel like the belle of the ball.</p>
-            </div>    
-        </article>
-        
-        <article id="blazers" class="right">
-            <div class="left-text">
-                <div class="underline"><a href="contact.html"><h2>Blazers</h2></a></div>
-                <p>Our bespoke blazers are the perfect addition to any wardrobe. From casual to formal, 
-                    our expertly crafted blazers are designed to make you look and feel your best. 
-                    We work closely with you to create a blazer that fits your unique style and preferences. 
-                    Whether you're looking for a classic navy blazer or something more daring, 
-                    our team will create a blazer that will become a go-to piece in your wardrobe.</p>
-            </div>
+                From intricate beading to luxurious fabrics, 
+                we'll create a gown that is truly one-of-a-kind.
+                We work closely with you to create a gown that fits your unique style and preferences, 
+                whether you're looking for a classic ball gown or something more modern.
+                </p>
+              </div>
+              <div id="gown-links">
+                  <ul>
+                  <li><a href="contact.html">Get in touch</a></li>
+                  <li><a href="https://www.instagram.com">Visit Instagram</a></li>
+                  </ul>
+                </div>
+              </div>
             
-            <div class="right-image">
-                <a href="contact.html">
-                <img src="./assets/img/blazer-unfinished.jpg" alt="Picture of unfinished blazer">
-            </a>
-            </div>
         </article>
-        <article id="coats" class="left">
-            <div class="left-image">
-                <a href="contact.html">
-                <img src="./assets/img/coat.jpg" alt="Woman in a coat, colorful flowering tree backdrop">
-            </a></div>
-        <div class="right-text">
-            <div class="underline"><a href="contact.html"><h2>Coats</h2></a></div>    
-            <p>Our bespoke coats are expertly crafted to keep you warm and stylish during the colder months. 
-                We use the finest materials and work closely with you to ensure that your coat is tailored to your unique style and preferences. Whether you're looking for a classic wool coat or a more modern parka, 
-                we'll create a coat that will become a staple in your wardrobe for years to come.</p>
-        </div>
+        <article id="blazer" class="center-grid">
+          <div></div>
+          <div class="grid2x2">
+            <div id="blazer-quot" class="flex-col">
+              <div><a href="https://www.instagram.com"><i class="zmdi zmdi-instagram"></i>
+              </a></div>
+              <div>
+                <p>&ldquo;Obsessed with my new bespoke blazer from <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>! 
+                  The fit is perfection and the quality is top-notch.
+                  Plus, the team was amazing to work with and made the whole process so easy. 
+                  Highly recommend!&bdquo;</p>
+              </div>
+            </div>
+            <div id="blazer-content">
+              <a href="contact.html"><h3>Choose right.</h3></a>
+              <p>Our bespoke blazers are the perfect addition to any wardrobe. 
+                From casual to formal, our expertly crafted blazers are designed 
+                to make you look and feel your best. We work closely with you 
+                to create a blazer that fits your unique style and preferences. 
+                Whether you're looking for a classic navy blazer or something more daring, 
+                our team will create a blazer that will become a go-to piece in your wardrobe.</p>
+            </div>
+            <div class="relative">
+              <div id="blazer-caption">
+              <h2>Blazers<br><span class="fw-300">&amp; Suits</span></h2>
+              </div>
+            </div>
+            <div id="blazer-img">
+              <img src="assets/img/fun-blazer.jpg" alt="Woman daning while wearing a blazer">
+            </div>
+          </div>
+          <div id="blazer-img-tall">
+            <img src="assets/img/tall.jpg" alt="Tall woman leaning against a concrete wall">
+          </div>
+        </article>
+        <article id="custom" class="center-grid">
+          <div></div>
+          <div class="line-grid">
+            <div id="custom-img">
+              <img src="assets/img/blazer.jpg" alt="Woman wearing a blazer">
+            </div>
+            <div id="custom-txt">
+              <h2>Personalized perfection.</h2>
+              <p>At our company, we are committed to providing exceptional service 
+                and are always happy to assist with any clothing-related requests. 
+                </p>
+            </div>
+          </div>
+          <div id="custom-fb">
+            <div><a href="https://www.facebook.com/"><i class="zmdi zmdi-facebook"></i></a>
+            </div>
+            <div>
+              <p>&ldquo;The team at <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> went above and beyond to create a truly unique and personalized experience, and the result was a wardrobe that truly reflects my individual style and preferences&bdquo;</p>
+            </div>
+          </div>
         </article>
     </section>
+</div>
 </main>
 <footer>
   <div id="copyright" class="flex-row">
