Removed one link

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
               </div>
             </div>
             <div id="blazer-content">
-              <a href="contact.html"><h3>Why us?</h3></a>
+              <h3>Why us?</h3>
               <p>Our bespoke blazers are the perfect addition to any wardrobe. 
                 From casual to formal, our expertly crafted blazers are designed 
                 to make you look and feel your best. We work closely with you 
