--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             <input type="text" name="phone" id="phone" placeholder="Your phone number">
             </div>
             <div class="form-row">
-            <textarea id="message" name="message">Type your message here</textarea>
+            <textarea id="message" name="message" placeholder="Type your message here"></textarea>
             </div>
             <div class="form-row">
               <input type="submit" value="Send">
