--- a/author.html
+++ b/author.html
@@ -33,7 +33,6 @@
           <div class="phone-ribbon">
           <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
           </div> 
-       
       </div>
 </header>
 <main>
@@ -45,7 +44,10 @@
       <div class="right-text">
         <h2>Aleksije Vukić</h2>
         <h3>115/22</h3>
-        <p>It's me.</p>
+        <ul>
+          <li><a href="https://github.com/aleksiye">GitHub<i class="zmdi zmdi-github-box"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/aleksije-vuki%C4%87-6667ab268/">LinkedIn<i class="zmdi zmdi-linkedin-box"></i></a></li>
+        </ul>
       </div>
       
   </div>
