--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
         </article>
         <article id="custom" class="center-grid">
           <div></div>
-          <div class="line-grid">
+          <div class="line-grid gap-15">
             <div id="custom-img">
               <img src="assets/img/blazer.jpg" alt="Woman wearing a blazer">
             </div>
