--- a/index.html
+++ b/index.html
@@ -36,83 +36,82 @@
       </div>
 </header>
 <main>
-      <div class="cover">
-        <div class="left-cover">
-          <aside>
-            <h2>Welcome to Gar De'Roba</h2> 
-            <p>where we believe that <span class="emphasize">every</span> 
-              woman deserves to feel confident 
-                and beautiful in her own skin.<br>
-                We specialize in creating bespoke clothing<br> 
-              that is tailor-made to <span class="emphasize">your</span> 
-              unique measurements<br> and preferences.</p>
-            <div class="cta-black"><a href="#learn-more">Learn more</a></div>
-          </aside>
-        </div>
-        <div class="right-cover cover-img">
-          <div class="filter"></div>
-          <div class="cta">
-            <a href="portfolio.html">
-            <h2>Bespoke Clothing</h2>
-            <p>Discover your unique style</p>
-            </a>
-          </div>
-        </div>
+  <div class="cover">
+    <div class="left-cover">
+      <aside>
+        <h2>Welcome to Gar De'Roba</h2> 
+        <p>where we believe that <span class="emphasize">every</span> 
+          woman deserves to feel confident 
+            and beautiful in her own skin.<br>
+            We specialize in creating bespoke clothing<br> 
+          that is tailor-made to <span class="emphasize">your</span> 
+          unique measurements<br> and preferences.</p>
+        <div class="cta-black"><a href="#learn-more">Learn more</a></div>
+      </aside>
+    </div>
+    <div class="right-cover cover-img">
+      <div class="filter"></div>
+      <div class="cta">
+        <a href="portfolio.html">
+        <h2>Bespoke Clothing</h2>
+        <p>Discover your unique style</p>
+        </a>
       </div>
-    <section>
-      <div class="center whatis">
-        <h2 id="learn-more">Experience the Luxury of Bespoke Clothing</h2>
-        <p>Whether you're looking for a stunning evening gown,
-          a perfectly fitted blazer,<br> or anything in between, 
-          we've got you covered.<br> 
-          We work closely with you to ensure that every detail is just right,<br> 
-          from the fabric selection to the finishing touches.</p>
-          <div class="cta-black"><a href="portfolio.html">Discover</a></div>
-      </div>
-    </section>
-    <section>
-      <div class="left">
-        <div class="left-image">
-          <img src="./assets/img/consultation.jpg" alt="Consultation with a tailor">
-        </div>
-        <div class="right-text border-btm border-top">
-        <article id="consultation">
-        <h2>Creating Your Perfectly Tailored Clothing</h2>
-        <p>Our process starts with a consultation, <br>either in person or online, 
-          where we get to know you and your style preferences.<br> 
-          We'll take precise measurements and discuss your expectations,<br> 
-          so we can create a garment that is expertly crafted just for you.</p>
-          <div class="cta-black"><a href="contact.html">Start now</a></div>
+    </div>
+  </div>
+<section>
+  <div class="center whatis">
+    <h2 id="learn-more">Experience the Luxury of Bespoke Clothing</h2>
+    <p>Whether you're looking for a stunning evening gown,
+      a perfectly fitted blazer,<br> or anything in between, 
+      we've got you covered.<br> 
+      We work closely with you to ensure that every detail is just right,<br> 
+      from the fabric selection to the finishing touches.</p>
+      <div class="cta-black"><a href="portfolio.html">Discover</a></div>
+  </div>
+</section>
+<section class="center">
+  <div class="article-grid gap-15 mar-15">
+    <div class="left-image">
+      <img src="./assets/img/tailor1.jpg" alt="Consultation with a tailor">
+    </div>
+    
+    <article id="consultation">
+    <h2 class="header-italic">Creating Your Perfectly Tailored Clothing</h2>
+    <p>Our process starts with a consultation, either in person or online, 
+      where we get to know you and your style preferences.
+      We'll take precise measurements and discuss your expectations, 
+      so we can create a garment that is expertly crafted just for you.</p>
+      <div class="cta-black"><a href="contact.html">Start now</a></div>
+    </article>
+    
+  </div>
+  <div class="article-grid gap-15">
+    <div class="line-grid">
+      <div class="relative">
+        <article id="portfolio">
+          <div></div>
+          <div><a href="portfolio.html"><h2 class="header-italic">Our portfolio</h2></a>
+            <p>Browse our portfolio of previously completed work 
+            to get inspired and see the quality of our craftsmanship.</p></div>
         </article>
-        </div>
       </div>
-      <div class="right">
-        <div class="right-image">
-          <img src="./assets/img/tailor.jpg" alt="Tailor preparing for work">
-        </div>
-        <div class="left-text border-btm border-top">
-          <article>
-          <h2>Our portfolio</h2>
-          <p>We also invite you to browse our portfolio of previously completed work<br> 
-          to get inspired and see the quality of our craftsmanship.</p>
-          <div class="cta-black"><a href="portfolio.html">Take a look</a></div>
-          </article>
-        </div>
-      </div>
-      <div class="left">
-        <div class="left-image"><img src="./assets/img/vision.jpg" alt="Woman wearing a dress in the field of roses"></div>
-        <div class="right-text border-btm border-top">
-          <article>
-          <h2>Your vision</h2>
-          <p>After the consultation, we'll work diligently to bring your vision to life.<br> 
-          We believe in transparency, so we'll keep you updated on the progress of your garment<br> 
-          and invite you to at least one fitting session <br>
-          to ensure that everything fits perfectly.</p>
-          <div class="cta-black"><a href="contact.html">Book a consultation</a></div>
-          </article>
-        </div>  
-        </div>
-      </section>
+      <img src="./assets/img/tailor2.jpg" alt="Tailor preparing for work">   
+    </div>
+    <div class="line-grid gap-15">
+      <article id="vision" class="block-pad">
+        <h2 class="header-italic">Your vision</h2>
+        <p>After the consultation, we'll work diligently to bring your vision to life.
+        We believe in transparency, so we'll keep you updated on the progress of your garment 
+        and invite you to at least one fitting session 
+        to ensure that everything fits perfectly.</p>
+        <div class="cta-black"><a href="contact.html">Book a consultation</a></div>
+      </article>
+      <img src="./assets/img/vision.jpg" alt="Woman wearing a dress in the field of roses">
+    </div>
+  </div>
+  
+  </section>
 </main>
 <footer>
   <div id="copyright" class="flex-row">
